[metadata]
name = django-routenplaner
version = file: _version.txt
description = Ein Routenplaner in Django
long_description = file: README.md
long_description_content_type = text/markdown
author = Rafael Urben
author_email = github@rafaelurben.ch
maintainer = Rafael Urben
maintainer_email = github@rafaelurben.ch
license = GNU General Public License v3 (GPLv3)
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
url = https://github.com/rafaelurben/django-teamized
project_urls =
    Docs = https://github.com/rafaelurben/django-routenplaner#readme
    GitHub = https://github.com/rafaelurben/django-routenplaner
    Issues = https://github.com/rafaelurben/django-routenplaner/issues
    Funding = https://github.com/sponsors/rafaelurben

[options]
setup_requires =
    setuptools
install_requires =
    Django>=4.2
python_requires = >= 3.10
include_package_data = true
packages = find:
